--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "postinstall": "npm run bootstrap",
-    "bootstrap": "lerna bootstrap",
-    "postbootstrap": "npm run build",
+    "postinstall": "npm run build",
     "prebuild": "rimraf packages/*/build/ packages/*/coverage/",
     "build": "lerna run -- build",
     "test": "lerna run -- test",
@@ -16,6 +14,9 @@
     "precommit": "lint-staged",
     "commitmsg": "commitlint -e"
   },
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
     "@commitlint/cli": "7.0.0",
     "@commitlint/config-angular": "7.0.1",
