--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "postinstall": "npm run bootstrap",
-    "bootstrap": "lerna bootstrap",
-    "postbootstrap": "npm run build",
+    "postinstall": "node ./scripts/netlify-check.js 'yarn build'",
     "prebuild": "rimraf packages/*/build/ packages/*/coverage/",
     "build": "lerna run -- build",
     "test": "lerna run -- test",
-    "prelint": "npm run prettier",
+    "prelint": "yarn prettier",
     "lint": "lerna run -- lint",
     "prettier": "prettier --config .prettierrc --write \"packages/*/{src,tests}/**/*.ts\"",
     "deploy": "lerna run -- deploy",
@@ -16,6 +14,9 @@
     "precommit": "lint-staged",
     "commitmsg": "commitlint -e"
   },
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
     "@commitlint/cli": "7.0.0",
     "@commitlint/config-angular": "7.0.1",
@@ -28,6 +29,7 @@
     "prettier": "1.13.7",
     "rimraf": "2.6.2",
     "rollup": "0.62.0",
+    "shelljs": "0.8.2",
     "tslint": "5.10.0",
     "typescript": "2.7.2"
   }
