--- a/packages/apollo-angular-link-http-common/package.json
+++ b/packages/apollo-angular-link-http-common/package.json
@@ -27,6 +27,7 @@
     "@angular/core": "^6.0.0 || ^7.0.0",
     "@angular/common": "^6.0.0 || ^7.0.0",
     "apollo-link": "^1.0.0",
+    "extract-files": "^5.0.1",
     "graphql": ">=0.11.0 <0.14.0 || ^14.0.0"
   },
   "devDependencies": {
