--- a/packages/apollo-angular-link-http/package.json
+++ b/packages/apollo-angular-link-http/package.json
@@ -30,7 +30,8 @@
     "graphql": ">=0.11.0 <0.14.0 || ^14.0.0"
   },
   "dependencies": {
-    "apollo-angular-link-http-common": "~1.5.0"
+    "apollo-angular-link-http-common": "~1.5.0",
+    "extract-files": "5.0.1"
   },
   "devDependencies": {
     "@angular/animations": "7.2.11",
