--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -36,38 +36,38 @@
     "apollo-client": "^2.3.4",
     "apollo-link": "^1.0.0",
     "rxjs": "^6.0.0",
-    "zone.js": "~0.8.20 || ~0.9.0"
+    "zone.js": "~0.8.20 || ~0.9.0 || ~0.10.0"
   },
   "dependencies": {
     "semver": "^6.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/core": "8.1.1",
-    "@angular-devkit/schematics": "8.1.1",
-    "@angular/common": "8.1.1",
-    "@angular/compiler": "8.1.1",
-    "@angular/compiler-cli": "8.1.1",
-    "@angular/core": "8.1.1",
-    "@angular/platform-browser": "8.1.1",
-    "@angular/platform-browser-dynamic": "8.1.1",
-    "@schematics/angular": "8.1.1",
-    "@types/graphql": "14.2.2",
-    "@types/jest": "24.0.14",
-    "@types/node": "10.14.12",
+    "@angular-devkit/core": "8.3.2",
+    "@angular-devkit/schematics": "8.3.2",
+    "@angular/common": "8.2.4",
+    "@angular/compiler": "8.2.4",
+    "@angular/compiler-cli": "8.2.4",
+    "@angular/core": "8.2.4",
+    "@angular/platform-browser": "8.2.4",
+    "@angular/platform-browser-dynamic": "8.2.4",
+    "@schematics/angular": "8.3.2",
+    "@types/graphql": "14.5.0",
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.3",
     "@types/semver": "6.0.1",
-    "apollo-cache-inmemory": "1.6.2",
-    "apollo-client": "2.6.3",
+    "apollo-cache-inmemory": "1.6.3",
+    "apollo-client": "2.6.4",
     "apollo-link": "1.2.12",
     "cpx": "1.5.0",
-    "graphql": "14.4.2",
+    "graphql": "14.5.4",
     "graphql-tag": "2.10.1",
-    "jest": "24.8.0",
+    "jest": "24.9.0",
     "jest-zone-patch": "0.0.10",
-    "ng-packagr": "5.3.0",
+    "ng-packagr": "5.5.0",
     "rxjs": "6.5.2",
     "ts-jest": "24.0.2",
-    "typescript": "3.4.5",
-    "zone.js": "0.9.1"
+    "typescript": "3.5.3",
+    "zone.js": "0.10.2"
   },
   "schematics": "./schematics/collection.json"
 }
