--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "24.0.19",
     "codecov": "3.6.1",
+    "globby": "10.0.1",
     "husky": "3.0.9",
     "jest": "24.9.0",
     "lerna": "3.18.1",
