--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -34,11 +34,11 @@
     "deploy:next": "yarn build && npm publish build --tag next"
   },
   "peerDependencies": {
-    "@angular/core": "^6.1.0 || ^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0 || ^11.0.0",
+    "@angular/core": "^9.0.0 || ^10.0.0 || ^11.0.0 || ^12.0.0",
     "@apollo/client": "^3.0.0",
-    "graphql": ">=0.11.0 <0.14.0 || ^14.0.0 || ^15.0.0",
+    "graphql": "^14.0.0 || ^15.0.0",
     "rxjs": "^6.0.0",
-    "zone.js": ">=0.8.0 <0.12.0"
+    "zone.js": ">=0.10.0 <0.12.0"
   },
   "dependencies": {
     "semver": "^7.0.0",
