--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
+      - uses: actions/cache@v2
+        name: Cache node_modules
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
       - name: Install
         run: yarn
 
@@ -34,3 +42,86 @@ jobs:
 
       - name: Test
         run: yarn test
+
+      - name: Pack
+        run: yarn workspace apollo-angular pack --filename apollo-angular.tgz
+
+      - uses: actions/cache@v2
+        name: Share tarball
+        with:
+          path: 'packages/apollo-angular/apollo-angular.tgz'
+          key: ${{ github.sha }}
+
+  angular:
+    name: Test on Angular ${{ matrix.angular_version }}
+    needs: test
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        angular_version: [10, 11, 12]
+    steps:
+      - name: Use Node.js 14
+        uses: actions/setup-node@master
+        with:
+          node-version: 14
+
+      - uses: actions/cache@v2
+        name: Share tarball
+        with:
+          path: 'packages/apollo-angular/apollo-angular.tgz'
+          key: ${{ github.sha }}
+
+      - uses: DamianReeves/write-file-action@master
+        name: Write verdaccio config
+        with:
+          path: verdaccio.yaml
+          contents: |
+            auth:
+              auth-memory:
+                users:
+                  foo:
+                    name: test
+                    password: test
+            storage: ./storage
+            server:
+              keepAliveTimeout: 60
+            uplinks:
+              npmjs:
+                url: https://registry.npmjs.org
+            packages:
+              '@*/*':
+                access: $all
+                publish: $all
+              '**':
+                access: $all
+                publish: $all
+            middlewares:
+              audit:
+                enabled: true
+            logs:
+              - {type: stdout, format: pretty, level: trace}
+          write-mode: overwrite
+
+      - name: Install Verdaccio
+        run: npm install -g verdaccio verdaccio-auth-memory
+
+      - name: Start Verdaccio
+        run: nohup verdaccio --config verdaccio.yaml &> mktemp.log &
+
+      - name: Wait for Verdaccio
+        run: grep -q 'http address' <(tail -f mktemp.log)
+        timeout-minutes: 3
+
+      - name: Publish
+        run: npm publish ./packages/apollo-angular/apollo-angular.tgz --registry http://0.0.0.0:4873 --access public
+
+      - name: Install Angular CLI
+        run: npm install @angular/cli@${{ matrix.angular_version }}
+
+      - name: Create Application
+        run: ng new testapp --package-manager npm --defaults --minimal
+
+      - name: ng add apollo-angular
+        working-directory: testapp
+        run: yarn ng add apollo-angular --registry http://0.0.0.0:4873 --skip-confirmation --defaults
+
